@@ -405,8 +405,8 @@ public class Certificates {
                             Class c = httpConn.getClass();
                             Method setConnTimeOut = c.getDeclaredMethod("setConnectTimeout", new Class[]{Integer.TYPE});
                             Method setReadTimeout = c.getDeclaredMethod("setReadTimeout", new Class[]{Integer.TYPE});
-                            setConnTimeOut.invoke(httpConn, new Integer[]{new Integer(5000)});
-                            setReadTimeout.invoke(httpConn, new Integer[]{new Integer(5000)});
+                            setConnTimeOut.invoke(httpConn, Integer.valueOf(5000));
+                            setReadTimeout.invoke(httpConn, Integer.valueOf(5000));
                         } catch (NoSuchMethodException nsme) {
                             // oh well, java 1.4 users can suffer.
                         } catch (Exception e) {
